--- a/src/style.css
+++ b/src/style.css
@@ -1,52 +1,4 @@
-@import "~bootstrap/dist/css/bootstrap.min.css";
-body {
-  background-color: rgb(45, 171, 104);
-}
-.card {
-  margin: 0 5px;
-  display: flex;
-  flex-direction: column;
-  width: 100px;
-  height: 150px;
-  border-radius: 30px;
-  border: 1px solid black;
-}
-.card-header {
-  display: flex;
-  align-items: center;
-  width: 100%;
-  height: 25%;
-}
-
-.card-header p {
-  padding-top: 1rem;
-  font-size: 2rem;
-  padding-left: 5%;
-}
-
-.card-body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 45%;
-}
-
-.card-body p {
-  font-size: 4rem;
-}
-
-.card-footer {
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  width: 100%;
-  height: 25%;
-  transform: scaleY(-1);
-}
-
-.card-footer p {
-  padding-top: 1rem;
-  font-size: 2rem;
-  padding-right: 5%;
+.card{
+    height: 106px !important; 
+    width: 70px !important;
 }
